# Wii-Sported

./: .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CODEBASE_EVALUATION.md  COMPREHENSIVE_ANALYSIS.md  GX_PORT_PLAN.md  IMPLEMENTATION_SUMMARY.md  NATIVE_PORT_PLAN.md  PC_PORT_PLAN.md  PC_PORT_STRATEGY.md  PR_SUMMARY.md  QUICKSTART.md  README.md  ROM_ANALYSIS.md  ROM_INTEGRATION_PLAN.md  USER_GUIDE.md  asset_extractor.py  build_from_rom.py
.github/workflows/: build-pc.yml  build.yml
cmake/: rom_extract.cmake
docs/: ONLINE_MULTIPLAYER.md  architecture.md  build_example.md  faq.md  migration_guide.md
include/: compat.h  lang.h  macros.h  platform.h  types.h
include/MSL/: cmath  cstdarg  cstdio  file_io.h  stdarg.h
include/MSL/internal/: math_double.h
include/Pack/RPAudio/: RPSndUtility.h
include/Pack/RPGraphics/: IRPGrpModelCallback.h  RPGrpModel.h  RPGrpModelG3D.h  RPGrpModelResManager.h
include/Pack/RPKernel/: IRPSysKokeshiBodyManager.h  RPSysKokeshi.h  RPSysLayout.h  RPSysLytBounding.h  RPSysParticleManager.h
include/egg/core/: eggController.h  eggIBinary.h
include/egg/gfxe/: eggAnalizeDL.h  eggDrawGX.h  eggFrustum.h  eggG3DUtility.h  eggIDrawGX.h  eggIScnProcModel.h  eggLightObject.h  eggModelEx.h  eggScnRootEx.h
include/egg/math/: eggMatrix.h  eggVector.h
include/nw4r/: math.h  nw4r_math.h
include/nw4r/ef/: ef_drawinfo.h  ef_effect.h  ef_effectsystem.h  ef_emitter.h  ef_emitterform.h  ef_linkedobject.h  ef_particle.h  ef_particlemanager.h  ef_referencedobject.h  ef_res_animcurve.h  ef_res_emitter.h  ef_types.h
include/nw4r/ef/drawstrategy/: ef_drawsmoothstripestrategy.h  ef_drawstrategyimpl.h
include/nw4r/g3d/: g3d_3dsmax.h  g3d_basic.h  g3d_calcview.h  g3d_calcworld.h  g3d_camera.h  g3d_dcc.h  g3d_draw.h  g3d_draw1mat1shp.h  g3d_fog.h  g3d_maya.h  g3d_scnmdlsmpl.h  g3d_scnobj.h  g3d_state.h  g3d_workmem.h
include/nw4r/g3d/platform/: g3d_gpu.h
include/nw4r/g3d/res/: g3d_resanmcamera.h  g3d_resanmchr.h  g3d_resanmlight.h  g3d_resmat.h  g3d_resmdl.h  g3d_resnode.h  g3d_resvtx.h
include/nw4r/lyt/: lyt_common.h  lyt_drawInfo.h  lyt_pane.h  lyt_types.h
include/nw4r/math/: math_arithmetic.h  math_triangular.h  math_types.h
include/nw4r/snd/: snd_Sound3DActor.h  snd_Sound3DListener.h  snd_Sound3DManager.h
include/nw4r/ut/: ut_CharWriter.h  ut_LockedCache.h  ut_Rect.h  ut_TextWriterBase.h  ut_algorithm.h
include/revolution/: MEM.h  PAD.h  WPAD.h
include/revolution/DVD/: dvd.h  dvdfs.h
include/revolution/GX/: GXHardware.h  GX_pc.h
include/revolution/IPC/: ipcHardware.h
include/revolution/KPAD/: KPAD.h
include/revolution/MEM/: mem_pc.h
include/revolution/OS/: OSAlloc.h  OSCache.h  OSFastCast.h  OSMutex.h  OSThread.h  OSTime.h  OS_pc.h  __ppc_eabi_init.h
include/revolution/PAD/: Pad.h
include/revolution/VI/: vi.h
include/revolution/WPAD/: WPAD.h
src/: main.cpp  pc_asset_loader.cpp  pc_asset_loader.h  rom_loader.cpp  rom_loader.h
src/Pack/RPAudio/: RPSndUtility.cpp
src/Pack/RPGraphics/: RPGrpModel.cpp  RPGrpModelResManager.cpp
src/Pack/RPKernel/: RPSysLayout.cpp  RPSysLytBounding.cpp  RPSysLytDynamicAnm.cpp  RPSysTextWriter.cpp  RP_DEBUG_STUB_0.cpp  RP_DEBUG_STUB_1.cpp
src/egg/core/: eggAsyncDisplay.cpp  eggColorFader.cpp  eggController.cpp
src/egg/gfxe/: eggLightTextureManager.cpp  eggModelEx.cpp  eggPostEffectBase.cpp
src/egg/math/: eggMath.cpp  eggMatrix.cpp  eggQuat.cpp  eggVector.cpp
src/gx_opengl/: gx_matrix.cpp  gx_state.cpp  gx_state.h  gx_texture.cpp  gx_texture.h  gx_vertex.cpp  gx_vertex.h
src/nw4r/ef/: ef_particlemanager.cpp  ef_util.cpp
src/nw4r/ef/drawstrategy/: ef_drawfreestrategy.cpp  ef_drawlinestrategy.cpp  ef_drawpointstrategy.cpp
src/nw4r/g3d/: g3d_anmobj.cpp  g3d_calcvtx.cpp  g3d_camera.cpp  g3d_dcc.cpp  g3d_light.cpp  g3d_scnobj.cpp
src/nw4r/g3d/res/: g3d_resanm.cpp  g3d_resanmtexpat.cpp  g3d_resanmtexsrt.cpp  g3d_resnode.cpp
src/nw4r/lyt/: lyt_common.cpp  lyt_pane.cpp
src/nw4r/math/: math_arithmetic.cpp  math_geometry.cpp  math_triangular.cpp  math_types.cpp
src/nw4r/snd/: snd_Sound3DManager.cpp  snd_Util.cpp
src/revolution/IPC/: ipcMain.c
src/revolution/KPAD/: KPAD_pc.cpp
src/revolution/MTX/: mtx_pc.c
src/revolution/OS/: OSHardware_pc.c  OSTime.c
src/revolution/PAD/: Pad_pc.cpp
src/revolution/VI/: vi_pc.cpp
src/revolution/WPAD/: WPAD_pc.cpp
tools/: rom_builder.cpp
